custom input date format

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <input type="date" data-style="fr" value="2014-04-20" min="2000-01-01" max="2050-12-31">
         <br>
         <hr>
-        <small><a href="http://compluter.com">compluter.com</a>
+        <small>
+            <a href="http://compluter.com">compluter.com</a>
+            <a href="https://github.com/north-is-northwest/custom-input-date-format">github</a>
+        </small>
         
         <script src="jquery-1.11.2.min.js"></script>
         <script src="custom-input-date.js"></script>
